# frostbite-wire

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
examples/: get_players.py
frostbite_wire/: __init__.py  client.py  packet.py  utils.py
tests/: __init__.py  test_packet.py  test_sequence_fields.py  test_utils_packet.py
