[metadata]
name = frostbite-wire
version = 0.0.1
author = Sean Myers
author_email = sean.dst@gmail.com
url = https://github.com/seandst/frostbite-wire
description = Frostbite game server wire protocol
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[files]
packages = frostbite_wire
